made combat work, pathfinding for units work, turnbase works, win condition works

--- a/hommproject/Assembly-CSharp.csproj
+++ b/hommproject/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Camera\CombatCamera.cs" />
      <Compile Include="Assets\Scripts\Combat\BattlefieldGenerator.cs" />
+     <Compile Include="Assets\Scripts\Combat\CombatManager.cs" />
      <Compile Include="Assets\Scripts\Events\CastleEvent.cs" />
      <Compile Include="Assets\Scripts\Events\EventBase.cs" />
      <Compile Include="Assets\Scripts\MasterObject\MasterObject.cs" />
@@ -57,6 +58,7 @@
      <Compile Include="Assets\Scripts\Player\PlayerEventBehaviour.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\Units\AttributesBase.cs" />
+     <Compile Include="Assets\Scripts\Units\SoldierAttributes.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
