added ui elements to town screen

--- a/hommproject/Assembly-CSharp.csproj
+++ b/hommproject/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Movement\AStarPathfinding.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerEventBehaviour.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Town\SelectStructure.cs" />
      <Compile Include="Assets\Scripts\Units\AttributesBase.cs" />
      <Compile Include="Assets\Scripts\Units\SoldierAttributes.cs" />
  <Reference Include="UnityEngine.UI">
