--- a/hommproject/Assembly-CSharp.csproj
+++ b/hommproject/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\Events\CastleEvent.cs" />
      <Compile Include="Assets\Scripts\Events\EventBase.cs" />
      <Compile Include="Assets\Scripts\MasterObject\MasterObject.cs" />
+     <Compile Include="Assets\Scripts\MasterObject\SaveState.cs" />
      <Compile Include="Assets\Scripts\Movement\AStarPathfinding.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerEventBehaviour.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
